--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,3 +3,4 @@ language:
     chapter_name: "Chapter "
 new_session: yes
 rmd_files: ["index.Rmd", "effectsize.Rmd", "references.Rmd"]
+output_dir: "docs"
