--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,4 +2,8 @@ language:
   ui:
     chapter_name: "Chapter "
 new_session: yes
-rmd_files: ["index.Rmd", "effectsize.Rmd", "references.Rmd"]
+rmd_files:
+  - "index.Rmd"
+  - "effectsize.Rmd"
+  - "effectsize_supplement.Rmd"
+  - "references.Rmd"
