--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,6 +5,10 @@ new_session: yes
 rmd_files:
   - "index.Rmd"
   - "effectsize.Rmd"
+  - "effectsize_exemplar_simple.Rmd"
+  - "effectsize_exemplar_within.Rmd"
+  - "effectsize_exemplar_standardized.Rmd"
+  - "effectsize_exemplar_nonparametric.Rmd"
   - "appendix.Rmd"
   - "appendix_effectsize.Rmd"
   - "references.Rmd"
