Add more potential binary package installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,57 @@ r_binary_packages:
 - rstan
 - devtools
 - MASS
+- checkmate
+- bitops
+- irlba
+- Formula
+- latticeExtra
+- acepack
+- data.table
+- htmlTable
+- viridis
+- SparseM
+- MatrixModels
+- httpuv
+- sourcetools
+- htmlwidgets
+- miniUI
+- PKI
+- RCurl
+- RJSONIO
+- packrat
+- igraph
+- crosstalk
+- minqa
+- nloptr
+- estimability
+- xtable
+- Hmisc
+- quantreg
+- shiny
+- colourpicker
+- DT
+- dygraphs
+- gtools
+- rsconnect
+- shinyjs
+- shinythemes
+- threejs
+- xts
+- Brobdingnag
+- lme4
+- lsmeans
+- pbkrtest
+- lmerTest
+- car
+- loo
+- rstantools
+- bayesplot
+- shinystan
+- bridgesampling
+- matrixStats
+- coda
+- abind
 r_packages:
 - ggstance
 - afex
