--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
 - ./_deploy.sh
 sudo: false
 cache:
-  packages: yes
+  packages: true
   directories:
     - $TRAVIS_BUILD_DIR/_bookdown_files
 r_github_packages:
