--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,3 +1,21 @@
 Package: placeholder for Travis to install required packages
 Title: Does not matter.
 Version: 0.0.1
+Imports:
+    tidyverse,
+    forcats,
+    broom,
+    Cairo,
+    effsize,
+    coin,
+    rstan,
+    devtools,
+    MASS,
+    ggstance,
+    afex,
+    import,
+    brms
+Remotes: 
+    rstudio/bookdown,
+    mjskay/tidybayes
+    
