Added links to draft Google Doc

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -11,6 +11,11 @@ rmd_files:
   - "guides/effectsize_exemplar_within.Rmd"
   - "guides/effectsize_exemplar_standardized.Rmd"
   - "guides/effectsize_exemplar_nonparametric.Rmd"
+  - "guides/bayesian.Rmd"
+  - "guides/likert.Rmd"
+  - "guides/planning.Rmd"
+  - "guides/pvalues.Rmd"
+  - "guides/transformation.Rmd"
   - "guides/appendix.Rmd"
   - "guides/appendix_principles_contribute.Rmd"
 #  - "guides/appendix_effectsize.Rmd"
