--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,5 +16,9 @@ Imports:
     afex,
     import,
     brms,
-    tidybayes
+    tidybayes,
+    cowplot,
+    modelr,
+    magrittr,
+    ggridges
     
